# Varaticket

./: .gitignore  README.md
contracts/varaticket/: Cargo.toml  README.md
contracts/varaticket/io/: Cargo.toml
contracts/varaticket/io/src/: lib.rs
contracts/varaticket/src/: lib.rs
contracts/varaticket/tests/: event_tests.rs  utils.rs
front/Chakra-UI-Vite-Template/: .gitignore  package.json
front/Chakra-UI-Vite-Template/src/: app.tsx  main.tsx
front/Chakra-UI-Vite-Template/src/pages/home/: BuyTicket.tsx  HoldTicket.tsx  ListEvents.tsx  ReadState.tsx  Ticketing.tsx  home.tsx
