[package]
name = "varaticket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0", features = ["debug"] }
multi-token-io = { git = "https://github.com/gear-foundation/dapps", tag = "v1.1.0"}
concert-io = { path = "io"}

[build-dependencies]
concert-io = { path = "io"}
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0", features = ["wasm-opt"] }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
tokio = { version = "1", features = ["full"] }
